# RePyPhiRenderer

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/.vitepress/: config.mts
resources/: config.toml
resources/shaders/rect/: rect.vert
resources/shaders/texture/: texture.frag  texture.vert
src/: arg_parser.py  arg_specs.py  chart.py  config.py  const.py  core.py  dxsmixer.py  dxsound.py  hitsound_mixer.py  main.py  player.py  renderer.py  shader.py  sound_manager.py  texture.py  timer.py  utils.py  video_renderer.py  window.py
