[project]
name = "repyphirenderer"
version = "0.1.0"
description = "基于 Python 的 Phigros 谱面播放器 / 渲染器"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json>=0.6.7",
    "librosa>=0.11.0",
    "llvmlite>=0.46.0",
    "loguru>=0.7.3",
    "moderngl>=5.12.0",
    "numba>=0.63.1",
    "pillow>=12.1.0",
    "pygame-ce>=2.5.6",
    "pywin32>=311",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
